# GB_DEVELOPMENT_OF_PROGRAMS_WITH_A_GRAPHICAL_INTERFACE_IN_C-

./: .gitignore  README.md
Homework_01/: CMakeLists.txt  Homework_01_ru_RU.ts  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Homework_02/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  parsetext.cpp  parsetext.h
Homework_03/: CMakeLists.txt  README.md  mail.ru.html  mainwindow.cpp  mainwindow.h  mainwindow.ui  parsedata.cpp  parsedata.h
Homework_07/: Homework_07.pro  README.md  blockscheme.cpp  blockscheme.h  firstscene.cpp  firstscene.h  main.cpp  mainwindow.cpp  mainwindow.h
Homework_09/: Homework_09.pro  README.md  main.qml  tascs.cpp  tascs.h
Homework_10/: README.md  main.qml  qml.qrc  tascs.cpp  tascs.h
Homework_11/: ButtonAdd.qml  main.qml  tablesqlview.cpp
Text_editor/: CMakeLists.txt  README.md  Text_editor.pro  Text_editor_en_EN.qm  Text_editor_en_EN.ts  Text_editor_ru_RU.qm  Text_editor_ru_RU.ts  info.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  navigatefilesysytem.cpp  navigatefilesysytem.h  search.cpp  search.h  searchthread.cpp  searchthread.h  src.qrc
